--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <title>js-our-team</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 text-center">
+                <h1>OUR TEAM</h1>
+            </div>
+            <div class="col-6 text-center">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto nam quod exercitationem cum nulla sed asperiores, earum nostrum totam harum expedita quos sunt, sapiente, ut impedit! Numquam architecto sint sequi.
+            </div>
+        </div>
+    </div>
 
 
 
