[UPD] Milestone 2 completed

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto nam quod exercitationem cum nulla sed asperiores, earum nostrum totam harum expedita quos sunt, sapiente, ut impedit! Numquam architecto sint sequi.
             </div>
         </div>
+        <div class="row justify-content-center">
+            <div class="col-12 text-center" id="team">
+
+            </div>
+        </div>
     </div>
 
 
